# cellular-automata

./: .gitignore  Cargo.toml  README.md  components.py  main.py  requirements.txt
config/: display.ron
python-ver/: global_variables.py  main.py  systems.py
src/: components.rs  constants.rs  main.rs  systems.rs
