[package]
name = "cellular-automata"
version = "0.1.0"
authors = ["Trevor Crow <14996662+skttomelo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5.1"
specs = "0.16.1"
cgmath = "0.18.0"
